--- a/css/style.css
+++ b/css/style.css
@@ -6,33 +6,101 @@
 
 body {
     width: 500px;
-    min-height: 200px;
-}
-
-.container {
-    align-items: center;
-    flex-direction: column;
+    min-height: 300px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 2rem;
 }
 
-.title {
-    font-family: 'Pacifico', cursive;
-    padding: 20px 0px 10px 0px;
+img {
+    height: 31px;
+    width: 166px;
+    margin: 1rem 0;
 }
 
-#input-result {
-    background-color: white!important;
+form {
+    display: flex;
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
-#input-result:focus {
+form div {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#create-button {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border: 1px solid #303669;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     outline: none;
-    border: #ced4da 1px solid;
+    background-color: #303669;
+    color: white;
+    cursor: pointer;
+    transition: all 200ms;
+    font-weight: 600;
 }
 
-.result button {
-    border: 1px solid #ced4da;
+#create-button:hover {
+    background-color: white;
+    color: #303669;
+    user-select: none;
 }
 
-.result button:hover {
-    background-color: #e9ecef;
+input {
+    outline: none;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-color: #c0c0c0;
+}
+
+#url {
+    border-top-left-radius: 1rem;
+    border: 1px solid #c0c0c0;
+    border-bottom: none;
+    border-right: none;
+}
+
+#password {
+    border-bottom-left-radius: 1rem;
+    border: 1px solid #c0c0c0;
+    border-right: none;
+}
+
+.result-wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#result {
+    border: 1px solid #c0c0c0;
+    flex-grow: 1;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border-right: none;
+}
+
+#copy-button {
+    user-select: none;
+    background-color: #303669;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: 1px solid #303669;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 200ms;
+    outline: none;
+    font-size: 1rem;
+}
+
+#copy-button:hover {
+    background-color: white;
+    color: #303669;
+    user-select: none;
 }
