--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     width: 500px;
-    min-height: 300px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +16,8 @@ body {
 img {
     height: 31px;
     width: 166px;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
+    user-select: none;
 }
 
 form {
@@ -74,13 +75,14 @@ input {
 .result-wrapper {
     display: flex;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 #result {
     border: 1px solid #c0c0c0;
     flex-grow: 1;
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
+    border-top-left-radius: 0.75rem;
+    border-bottom-left-radius: 0.75rem;
     border-right: none;
 }
 
@@ -90,8 +92,8 @@ input {
     color: white;
     padding: 0.5rem 1rem;
     border: 1px solid #303669;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    border-top-right-radius: 0.75rem;
+    border-bottom-right-radius: 0.75rem;
     cursor: pointer;
     font-weight: 600;
     transition: all 200ms;
